--- a/.env.example
+++ b/.env.example
@@ -69,9 +69,9 @@ STREAMING_TOPIC_CATEGORY_ENABLED=Category.Enabled
 STREAMING_TOPIC_CATEGORY_DISABLED=Category.Disabled
 STREAMING_TOPIC_CATEGORY_DELETED=Category.Deleted
 STREAMING_TOPIC_CATEGORY_ORDER_UPDATED=Category.OrderUpdated
-STREAMING_TOPIC_CATEGORY_POST_VALIDATION_SUCCESS=Category.PostValidationSuccess
-STREAMING_TOPIC_CATEGORY_POST_VALIDATION_FAILED=Category.PostValidationFailed
+STREAMING_TOPIC_CATEGORY_LISTING_VALIDATION_SUCCESS=Category.ListingValidationSuccess
+STREAMING_TOPIC_CATEGORY_LISTING_VALIDATION_FAILED=Category.ListingValidationFailed
 
-# Post Events #
-STREAMING_TOPIC_POST_CREATED=Post.Created
-STREAMING_TOPIC_POST_UPDATED=Post.Updated
+# Listing Events #
+STREAMING_TOPIC_LISTING_CREATED=Listing.Created
+STREAMING_TOPIC_LISTING_UPDATED=Listing.Updated
